--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,14 @@ button{
     font-weight: 500;
     font-size: 1.5rem;
 }
+
+.notify {
+    color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    background: #222436;
+    margin-top: 20px;
+    border-radius: 15px;
+    padding: 5px 20px;
+    display: none;
+}
